# bike-configurator

./: .gitignore  Bike Configurator.session.sql  Pipfile  README.md  alembic.ini  bike_configurator.db  bike_types.json  cars.json  carsharing.db  compose.yaml  configurator.py  create_content.py  create_user.py  db.py  main.py  requirements.txt  schemas.py
app/: main.py
backend/: Dockerfile  create_content.py  pyproject.toml  requirements.txt  startup.sh
backend/app/: main.py
backend/app/crud/: assemblygroup.py  assemblygroupmodule.py
backend/app/models/: assemblygroupmodule.py
backend/app/utils/: database.py  web.py
backend/app/views/: biketype.py  user.py
backend/demo/: assemblygroup.py  biketype.py  create_content.py  create_user.py  set_content.py
backend/src/: main.py
backend/src/content/: create_content.py  mountainbike.py  roadbike.py
backend/src/crud/: assemblygroup.py  assemblygroupmodule.py  bikecomponent.py  bikepart.py  bikeproduct.py  biketype.py
backend/src/models/: assemblygroup.py  assemblygroupmodule.py  bikecomponent.py  bikepart.py  bikeproduct.py  biketype.py  links.py  user.py
backend/src/templates/: home.html  search_results.html
backend/src/utils/: database.py  logging.py  openapi_desc.py  web.py
backend/src/views/: assemblygroup.py  assemblygroupmodule.py  bikecomponent.py  bikepart.py  bikeproduct.py  biketype.py  user.py
backend/templates/: home.html
backend/test/: test_assemblygroup.py  test_assemblygroupmodule.py  test_bikecomponent.py  test_biketype.py
backend/tests/: test_assemblygroup.py  test_assemblygroupmodule.py  test_bikecomponent.py  test_bikepart.py  test_bikeproduct.py  test_biketype.py
cors_demo/: cors_demo.html
database/: Dockerfile
(+119 files in other folders)
