[project]
name = "bike-configurator"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantinos Drachtidis",email = "kdrachtidis@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi-sqlalchemy (>=0.2.1,<0.3.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
